# opus_magnum_sim

./: .gitignore  README.md  _test_flow.py  pyproject.toml
src/opus_magnum_sym/: __init__.py
src/opus_magnum_sym/elements/: __init__.py  actions.py  components.py  env.py
src/opus_magnum_sym/elements/actions/: __init__.py  actions.py  base_action.py
src/opus_magnum_sym/elements/board/: __init__.py  board.py  directions.py  hex.py
src/opus_magnum_sym/elements/components/: __init__.py  base_component.py  components_index.py  enter_exit.py  manipulator.py  manupulator.py
src/opus_magnum_sym/elements/env/: __init__.py  index_manager.py  level_counter.py
src/opus_magnum_sym/elements/objects/: __init__.py  base_object.py
src/opus_magnum_sym/simulation/: __init__.py  simulatior.py  simulator.py
tests/: test_index_manager.py
