[project]
name = "opus-magnum-sym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dolomirr", email = "dolomirr@gmail.com" }
]
requires-python = ">=3.14.2"
dependencies = [
    "pygame-ce>=2.5.7",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
